[package]
name = "walktime"
version = "0.1.0"
edition = "2018"

categories = ["no-std", "embedded"]

[dependencies]
cortex-m-semihosting = { version = "^0.3.5", optional = true }
cortex-m = { version = "^0.6.1", optional = true }
semihosting = { version = "^0.1.0", optional = true, git = "https://github.com/AerialX/semihosting.rs" }
reachability = { version = "^0.1.0", optional = true, git = "https://github.com/AerialX/reachability.rs" }
linkme = { version = "^0.1.6", optional = true }

[features]
default = []
unstable = []
constructors = ["linkme"]
logging = []
no-inline = []
no-panic = ["reachability"]
alloc = []
fmt = []
